routes/gh-action-idp-swagger-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gh-action-idp-swagger-ui-route
  namespace: swagger-ui
  labels:
    example: gh-action-idp-swagger-ui-route
    gateway: https
spec:
  hostnames:
  - "idp.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: gh-action-idp-swagger-ui
          namespace: swagger-ui
          port: 80
      #matches:
      #  - path:
      #      type: PathPrefix
      #      value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: gh-action-idp-swagger-ui-route-policies
